# airline-tweet-sentiment

./: .gitignore  CITATION.cff  README.md  pyproject.toml  requirements.txt
config/: cnn_bilstm.yaml  config.yaml  ml.yaml  transformers.yaml
docs/: architecture.md
notebooks/: exploratory_data_analysis.ipynb
scripts/: download_data.sh  prepare_datasets.py  run_cnn_bilstm.sh  run_ml_experiments.sh  run_transformers.sh
src/airline_sentiment/: __init__.py
src/airline_sentiment/data/: __init__.py  dataset_manager.py  datasets.py
src/airline_sentiment/evaluation/: __init__.py  analysis.py  metrics.py
src/airline_sentiment/features/: __init__.py  bow_vectorizer.py  tfidf_vectorizer.py  word2vec_embeddings.py
src/airline_sentiment/models/: __init__.py
src/airline_sentiment/models/dl/: __init__.py  cnn_bilstm.py
src/airline_sentiment/models/ml/: __init__.py  adaboost.py  decision_tree.py  experiment_runner.py  knn.py  logistic_regression.py  random_forest.py  svm.py
src/airline_sentiment/models/transformers/: __init__.py  dataset.py  trainer.py
src/airline_sentiment/preprocessing/: __init__.py  augmentation.py  splitter.py  text_cleaning.py
src/airline_sentiment/utils/: __init__.py  config.py  logging_utils.py  seed.py
